<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context=".OTPVerificationActivity"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/verifyMobileNumber"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/enterYourOtp"
            android:textColor="@color/ivory"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="14sp" />

        <com.chaos.view.PinView
            android:id="@+id/pinView"
            style="@style/PinWidget.PinView"
            android:layout_width="210sp"
            android:layout_height="50dp"
            android:inputType="number"
            app:itemCount="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/regular"
            android:text="@string/OTPNotReceived"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/resendOTP"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/verifyOTPBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="150sp"
            android:layout_height="50sp"
            app:backgroundTint="@color/secondary"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/bold"
            android:text="@string/verifyOTP"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/ivory"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/progressBarOTP"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</RelativeLayout>