<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingTop="30dp"
    android:paddingRight="25dp"
    android:paddingBottom="30dp"
    android:windowFullscreen="true"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/student_illustration"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/signIn"
        android:textAlignment="center"
        android:fontFamily="@font/bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView16"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:text="@string/letsGetStarted"
        android:textAlignment="center"
        android:textColor="@color/ivory"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/black"
        app:hintTextColor="@color/black"
        android:hint="@string/mobile_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileNumberText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sentOTPBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_below="@+id/mobileNumberLayout"
        app:backgroundTint="@color/secondary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/bold"
        android:text="@string/sentOtp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/ivory"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />
</RelativeLayout>